add recipe image and max width/height of picture

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Pizza Margherita</h1>
+    <img src="pizaa.jpg" alt="picture of pizza" width="500px" height="500px">
 </body>
 </html>
