--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Pizza Margherita</h1>
     <img src="pizaa.jpg" alt="picture of pizza" width="500px" height="500px">
+    <h2>Best pizza under the sun OY</h2>
 </body>
 </html>
