Add List of ingredients

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -10,5 +10,12 @@
     <h1>Pizza Margherita</h1>
     <img src="pizaa.jpg" alt="picture of pizza" width="500px" height="500px">
     <h2>Best pizza under the sun OY</h2>
+    <ul>
+        <li>112-inch round of pizza dough, stretched </li>
+        <li>3tablespoons tomato sauce </li>
+        <li>Extra-virgin olive oil</li>
+        <li>2¾ounces fresh mozzarella</li>
+        <li>4 to 5basil leaves, roughly torn</li>
+    </ul>
 </body>
 </html>
