Add 2 new links to recipe pages

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/pizza.html">Margherita Recipe</a>
+    <a href="recipes/meal1.html">Meal 1 Recipe</a>
+    <a href="recipes/meal2.html">Meal 2 Recipe</a>
 </body>
 </html>
