--- a/recipes/meal1.html
+++ b/recipes/meal1.html
@@ -7,22 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Pizza Margherita</h1>
-    <img src="pizaa.jpg" alt="picture of pizza" width="500px" height="500px">
-    <h2>Best pizza under the sun OY</h2>
+    <h1>Meal1</h1>
+    <img src="meal1.jpg" alt="picture of meal1" width="500px" height="500px">
+    <h2>Best meal1 under the sun OY</h2>
     <ul>
-        <li>112-inch round of pizza dough, stretched </li>
-        <li>3tablespoons tomato sauce </li>
-        <li>Extra-virgin olive oil</li>
-        <li>2¾ounces fresh mozzarella</li>
-        <li>4 to 5basil leaves, roughly torn</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
     </ul>
     <h3> Steps needed to make the dish</h3>
     <ol>
-        <li><em>Place a pizza stone or tiles on the middle rack of your oven and turn heat to its highest setting. Let it heat for at least an hour.</em></li>
-        <li><em>Put the sauce in the center of the stretched dough and use the back of a spoon to spread it evenly across the surface, stopping approximately ½ inch from the edges.</em></li>
-        <li><em>Drizzle a little olive oil over the pie. Break the cheese into large pieces and place these gently on the sauce. Scatter basil leaves over the top.</em></li>
-        <li><em>Using a pizza peel, pick up the pie and slide it onto the heated stone or tiles in the oven. Bake until the crust is golden brown and the cheese is bubbling, approximately 4 to 8 minutes.</em></li>
+        <li><em></em></li>
+        <li><em></em></li>
+        <li><em></em></li>
+        <li><em></em></li>
     </ol>
 </body>
 </html>
